<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DatabaseActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_data_base">

    <EditText
        android:id="@+id/numberVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="414dp"
        android:ems="10"
        android:hint="Write a number ..."
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/readVersionNumber"
        android:layout_width="135dp"
        android:layout_height="91dp"
        android:layout_marginBottom="256dp"
        android:onClick="readVersionNumber"
        android:text="@string/readVersionNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <Button
        android:id="@+id/updateVersionNumber"
        android:layout_width="135dp"
        android:layout_height="91dp"
        android:layout_marginBottom="256dp"
        android:onClick="updateVersionNumber"
        android:text="@string/updateVersion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <EditText
        android:id="@+id/showNumberVersion"
        android:layout_width="238dp"
        android:layout_height="59dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/dbVersionNumber"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <Button
        android:id="@+id/buttonInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="31dp"
        android:text="@string/button_inc"
        android:onClick="incrementN"
        app:layout_constraintStart_toStartOf="@+id/showNumberVersion"
        app:layout_constraintTop_toBottomOf="@+id/showNumberVersion" />

    <Button
        android:id="@+id/buttonDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="95dp"
        android:onClick="decrementN"
        android:text="@string/button_dec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showNumberVersion" />

    <TextView
        android:id="@+id/textN"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="316dp"
        android:hint="@string/n_value"
        android:onClick="decrementN"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberVersion" />

</androidx.constraintlayout.widget.ConstraintLayout>